Update link in index.html to new URL

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <h1>Знания, которые работают.</h1>
             <p class="subhead">Vyud AI превращает ваши статичныеи сложные документы в живые интерактивные курсы. Новый шаг в корпоративном обучении.</p>
             
-            <a href="https://vyudai.streamlit.app/" class="btn-primary" target="_blank">Попробуйте</a>
+            <a href="https://app.vyud.online" class="btn-primary" target="_blank">Попробуйте</a>
 
             <div class="hero-image-wrapper">
                 <img src="image_1.png" alt="Интерфейс Vyud AI" class="hero-image-placeholder">
