Update description and text in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Vyud AI | Обучение нового поколения</title>
-    <meta name="description" content="Превратите PDF, PowerPoint, TXT, Word, Excel в интерактивные курсы за секунды. Автоматизация обучения, проверка знаний и выдача сертификатов.">
+    <meta name="description" content="Превратите PDF, Video, PowerPoint, TXT, Word, Excel в интерактивные курсы за секунды. Автоматизация обучения, проверка знаний и выдача сертификатов.">
 
     <link rel="icon" type="image/png" href="favicon.png">
 
@@ -266,7 +266,7 @@
     <section class="hero">
         <div class="container">
             <h1>Знания, которые работают.</h1>
-            <p class="subhead">Vyud AI превращает ваши статичныеи сложные документы в живые интерактивные курсы. Новый шаг в корпоративном обучении.</p>
+            <p class="subhead">Vyud AI превращает ваши статичные и сложные документы в живые интерактивные курсы. Новый шаг в обучении.</p>
             
             <a href="https://app.vyud.online" class="btn-primary" target="_blank">Попробуйте</a>
 
@@ -279,7 +279,7 @@
     <section class="philosophy">
         <div class="container">
             <blockquote>
-                "Мы верим, что знания компании не должны пылиться в PDF, PowerPoint, Word, TXT, Excel файлах.  Традиционное обучение статично. Vyud AI строит мост между информацией и реальным пониманием."
+                "Мы верим, что знания компании и экспертов не должны пылиться в PDF, Video, PowerPoint, Word, TXT, Excel файлах.  Традиционное обучение статично. Vyud AI строит мост между информацией и реальным пониманием."
             </blockquote>
         </div>
     </section>
