Update og:description meta tag for clarity

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon.png">
 
     <meta property="og:title" content="Vyud AI | Знания, которые работают">
-    <meta property="og:description" content="Мгновенная трансформация регламентов в интерактивные тесты. Попробуйте демо.">
+    <meta property="og:description" content="Мгновенная трансформация регламентов, инструкций и видео в интерактивные тесты. Попробуйте демо.">
     <meta property="og:image" content="https://vyud.tech/image_1.png">
     <meta property="og:url" content="https://vyud.tech/">
     <meta property="og:type" content="website">
