Enhance favicon and add apple-touch-icon
Added sizes attribute for favicon and included apple-touch-icon.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>VYUD AI | Скорость мысли. Простота решения.</title>
     <meta name="description" content="SaaS платформа для мгновенного создания курсов из PDF, Video и DOCX. Обучение сотрудников на автопилоте.">
 
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://vyud.tech/">
