--- a/index.html
+++ b/index.html
@@ -347,7 +347,8 @@
                 <div class="feature-content">
                     <div class="feature-item">
                         <h3>Мультиформатный движок</h3>
-                        <p>Читает <span class="code-pill">.pdf</span> <span class="code-pill">.docx</span> <span class="code-pill">.mp4</span>. Понимает структуру таблиц и сложную верстку.</p>
+                        <p>Читает <span class="code-pill">.pdf</span> <span class="code-pill">.docx</span> <span class="code-pill">.pptx</span> class="code-pill">.txt</span> <span class="code-pill">.mp4</span> <span class="code-pill">.mov</span> <span class="code-pill">и т.д.</span>. 
+                        Понимает структуру таблиц и сложную верстку.</p>
                     </div>
                     <div class="feature-item">
                         <h3>Глобальный охват</h3>
