Update email address in footer

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         <div class="container">
             <p>
                 &copy; 2026 VYUD AI. <span style="color: var(--accent-neon);">System Online.</span><br><br>
-                <a href="mailto:vatutovd@gmail.com">vatutovd@gmail.com</a>
+                <a href="mailto:vatyutovd@gmail.com">vatyutovd@gmail.com</a>
                 <a href="https://t.me/retyreg" target="_blank">Telegram</a>
             </p>
         </div>
