Update favicon and improve text content
Updated favicon link to use SVG data URI and modified various text elements for clarity and completeness.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>VYUD AI | Скорость мысли. Простота решения.</title>
     <meta name="description" content="SaaS платформа для мгновенного создания курсов из PDF, Video и DOCX. Обучение сотрудников на автопилоте.">
 
-    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 64 64%22><rect width=%2264%22 height=%2264%22 rx=%2212%22 fill=%22%230E1117%22/><path d=%22M24 16L14 32L24 48L32 32Z%22 fill=%22%2300D4FF%22 opacity=%220.9%22/><path d=%22M40 16L30 32L40 48L50 32Z%22 fill=%22%2300D4FF%22/></svg>">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://vyud.tech/">
@@ -21,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=JetBrains+Mono:wght@400;500&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
     
     <style>
-        /* --- DESIGN SYSTEM: DEEP SPACE NEON [cite: 97, 130] --- */
+        [cite_start]/* --- DESIGN SYSTEM: DEEP SPACE NEON [cite: 97, 130] --- */
         :root {
             /* Palette */
             --bg-void: #0E1117;        /* Void Black */
@@ -88,7 +87,7 @@
             border: 1px solid rgba(0, 212, 255, 0.2);
         }
 
-        /* Neon Button [cite: 141-144] */
+        [cite_start]/* Neon Button [cite: 141-144] */
         .btn-primary {
             display: inline-block;
             background-color: transparent;
@@ -347,7 +346,7 @@
                 <div class="feature-content">
                     <div class="feature-item">
                         <h3>Мультиформатный движок</h3>
-                        <p>Читает <span class="code-pill">.pdf</span> <span class="code-pill">.docx</span> <span class="code-pill">.pptx</span> class="code-pill">.txt</span> <span class="code-pill">.mp4</span> <span class="code-pill">.mov</span> <span class="code-pill">и т.д.</span>. 
+                        <p>Читает <span class="code-pill">.pdf</span> <span class="code-pill">.docx</span> <span class="code-pill">.pptx</span> <span class="code-pill">.txt</span> <span class="code-pill">.mp4</span> <span class="code-pill">.mov</span>. 
                         Понимает структуру таблиц и сложную верстку.</p>
                     </div>
                     <div class="feature-item">
@@ -356,7 +355,7 @@
                     </div>
                     <div class="feature-item">
                         <h3>Hard Skills & Кейсы</h3>
-                        <p>Не просто тесты на память. ИИ создает ситуационные задачи, проверяя умение применять знания.</p>
+                        <p>Не просто тесты на память. ИИ создает ситуационные задачи трех уровней сложности, проверяя умение применять знания.</p>
                     </div>
                     <div class="feature-item">
                         <h3>Сертификация</h3>
@@ -385,7 +384,6 @@
         <div class="container">
             <p>
                 &copy; 2026 VYUD AI. <span style="color: var(--accent-neon);">System Online.</span><br><br>
-                <a href="mailto:vatyutovd@gmail.com">vatyutovd@gmail.com</a>
                 <a href="https://t.me/retyreg" target="_blank">Telegram</a>
             </p>
         </div>
