Refactor HTML icon and comments
Updated SVG icon and cleaned up comments for clarity.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>VYUD AI | Скорость мысли. Простота решения.</title>
     <meta name="description" content="SaaS платформа для мгновенного создания курсов из PDF, Video и DOCX. Обучение сотрудников на автопилоте.">
 
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 64 64%22><rect width=%2264%22 height=%2264%22 rx=%2212%22 fill=%22%230E1117%22/><path d=%22M24 16L14 32L24 48L32 32Z%22 fill=%22%2300D4FF%22 opacity=%220.9%22/><path d=%22M40 16L30 32L40 48L50 32Z%22 fill=%22%2300D4FF%22/></svg>">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20rx%3D%2212%22%20fill%3D%22%230E1117%22%2F%3E%3Cpath%20d%3D%22M24%2016L14%2032L24%2048L32%2032Z%22%20fill%3D%22%2300D4FF%22%20opacity%3D%220.9%22%2F%3E%3Cpath%20d%3D%22M40%2016L30%2032L40%2048L50%2032Z%22%20fill%3D%22%2300D4FF%22%2F%3E%3C%2Fsvg%3E">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://vyud.tech/">
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=JetBrains+Mono:wght@400;500&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
     
     <style>
-        [cite_start]/* --- DESIGN SYSTEM: DEEP SPACE NEON [cite: 97, 130] --- */
+        /* --- DESIGN SYSTEM: DEEP SPACE NEON --- */
         :root {
             /* Palette */
             --bg-void: #0E1117;        /* Void Black */
@@ -87,7 +87,7 @@
             border: 1px solid rgba(0, 212, 255, 0.2);
         }
 
-        [cite_start]/* Neon Button [cite: 141-144] */
+        /* Neon Button */
         .btn-primary {
             display: inline-block;
             background-color: transparent;
@@ -211,7 +211,6 @@
         .flow-visual img {
             max-width: 100%;
             height: auto;
-            /* Небольшое свечение вокруг схемы */
             filter: drop-shadow(0 0 20px rgba(125, 60, 255, 0.1)); 
         }
 
@@ -355,7 +354,7 @@
                     </div>
                     <div class="feature-item">
                         <h3>Hard Skills & Кейсы</h3>
-                        <p>Не просто тесты на память. ИИ создает ситуационные задачи трех уровней сложности, проверяя умение применять знания.</p>
+                        <p>Не просто тесты на память. ИИ создает ситуационные задачи, проверяя умение применять знания.</p>
                     </div>
                     <div class="feature-item">
                         <h3>Сертификация</h3>
@@ -384,6 +383,7 @@
         <div class="container">
             <p>
                 &copy; 2026 VYUD AI. <span style="color: var(--accent-neon);">System Online.</span><br><br>
+                <a href="mailto:vatutovd@gmail.com">vatutovd@gmail.com</a>
                 <a href="https://t.me/retyreg" target="_blank">Telegram</a>
             </p>
         </div>
