Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>VYUD AI | Скорость мысли. Простота решения.</title>
-    <meta name="description" content="SaaS платформа для мгновенного создания курсов из PDF, Video, DOCX и других доков. Обучение сотрудников на автопилоте.">
+    <meta name="description" content="SaaS платформа для мгновенного создания курсов из PDF, Video и DOCX. Обучение сотрудников на автопилоте.">
 
     <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20rx%3D%2212%22%20fill%3D%22%230E1117%22%2F%3E%3Cpath%20d%3D%22M24%2016L14%2032L24%2048L32%2032Z%22%20fill%3D%22%2300D4FF%22%20opacity%3D%220.9%22%2F%3E%3Cpath%20d%3D%22M40%2016L30%2032L40%2048L50%2032Z%22%20fill%3D%22%2300D4FF%22%2F%3E%3C%2Fsvg%3E">
 
@@ -413,7 +413,7 @@
         <div class="container">
             <h1>Знания, которые <br><span>работают</span>.</h1>
             <p class="subhead">
-                VYUD AI превращает ваши PDF, Видео и Инструкции в интерактивные тесты и квизы.<br>
+                VYUD AI превращает ваши PDF, Видео и Инструкции в интерактивные курсы.<br>
                 <span style="font-family: var(--font-tech); font-size: 0.9em; color: var(--accent-purple);">
                     > Status: Ready to deploy
                 </span>
@@ -449,7 +449,7 @@
     <section class="philosophy">
         <div class="container">
             <blockquote>
-                "ИИ — это упорядочивание хаоса. Мы превращаем энтропию документов в <span>структурированное знание</span>."
+                "ИИ — это упорядочивание хаоса. Мы превращаем энтропию старых документов в <span>структурированное знание</span>."
             </blockquote>
         </div>
     </section>
@@ -518,7 +518,7 @@
                     <div class="testimonial-author">
                         <div class="author-avatar">АГ</div>
                         <div class="author-info">
-                            <strong>Асель Галиева</strong>
+                            <strong>Assel Galieva</strong>
                             <span>Head of Learning & Talent, Xalq Banki</span>
                         </div>
                     </div>
@@ -527,13 +527,13 @@
                 <!-- Отзыв 2 -->
                 <div class="testimonial-card">
                     <div class="testimonial-content">
-                        <p>«Классный продукт! Активно используем для тестирования знаний студентов по пройденным темам и курсам.»</p>
+                        <p>«Классный продукт! Активно использую для тестирования знаний у junior и middle разработчиков.»</p>
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">DL</div>
                         <div class="author-info">
                             <strong>Aizhan Tysynova</strong>
-                            <span>AI in Education| Education Program Manager@Efekta</span>
+                            <span>AI in Education| Education Program Manager</span>
                         </div>
                     </div>
                 </div>
@@ -546,8 +546,8 @@
                     <div class="testimonial-author">
                         <div class="author-avatar">AM</div>
                         <div class="author-info">
-                            <strong>Aider Mambediev</strong>
-                            <span>AKASHI DATA CENTER| AI Strategy | GovTech</span>
+                            <strong>Айдер Мамбедиев</strong>
+                            <span>AKASHI| Strategy | GovTech</span>
                         </div>
                     </div>
                 </div>
