Update testimonial author name to English

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                     <div class="testimonial-author">
                         <div class="author-avatar">AM</div>
                         <div class="author-info">
-                            <strong>Айдер Мамбедиев</strong>
+                            <strong>Aider Mambediev</strong>
                             <span>AKASHI| Strategy | GovTech</span>
                         </div>
                     </div>
