--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/106277227" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -220,7 +220,7 @@
                 VYUD AI превращает ваши PDF, Видео и Инструкции в интерактивные курсы.<br>
                 <span style="font-family: var(--font-tech); font-size: 0.9em; color: var(--accent-purple);">> Status: Ready to deploy</span>
             </p>
-            <a href="https://app.vyud.online" class="btn-primary" target="_blank">Запустить Демо</a>
+            <a href="https://app.vyud.online" class="btn-primary" target="_blank"><a href="https://app.vyud.online" class="btn-primary" target="_blank" onclick="ym(106277227,'reachGoal','click_demo')">Запустить Демо</a>
             <div class="hero-visual">
                 <img src="hero_dashboard.svg" alt="VYUD AI Dashboard Interface">
             </div>
@@ -344,7 +344,7 @@
         <div class="container">
             <p>&copy; 2026 VYUD AI. <span style="color: var(--accent-neon);">System Online.</span><br><br>
                 <a href="mailto:vatutovd@gmail.com">vatutovd@gmail.com</a>
-                <a href="https://t.me/retyreg" target="_blank">Telegram</a>
+                <a href="https://t.me/retyreg" target="_blank" onclick="ym(106277227,'reachGoal','click_telegram')">Telegram</a>
             </p>
         </div>
     </footer>
