Update text in index (1).html for clarity

--- a/index (1).html
+++ b/index (1).html
@@ -340,10 +340,10 @@
         <div class="container">
             <h1>Знания, которые <br><span>работают</span>.</h1>
             <p class="subhead">
-                VYUD AI превращает ваши PDF, Видео и Инструкции в интерактивные курсы.<br>
+                VYUD AI превращает ваши PDF, Видео и Инструкции в интерактивные тесты.<br>
                 <span style="font-family: var(--font-tech); font-size: 0.9em; color: var(--accent-purple);">> Status: Ready to deploy</span>
             </p>
-            <a href="https://app.vyud.online" class="btn-primary" target="_blank" onclick="ym(106277227,'reachGoal','click_demo')">Запустить Демо</a>
+            <a href="https://app.vyud.online" class="btn-primary" target="_blank" onclick="ym(106277227,'reachGoal','click_demo')">Начать</a>
             <div class="hero-visual">
                 <img src="hero_dashboard.svg" alt="VYUD AI Dashboard Interface">
             </div>
@@ -514,7 +514,7 @@
     <section class="trust">
         <div class="container">
             <h2>Безопасность уровня Enterprise</h2>
-            <p style="margin-top: 15px;">LlamaCloud + OpenAI Enterprise. Строгая изоляция данных.<br>Ваши корпоративные знания остаются только вашими.</p>
+            <p style="margin-top: 15px;">LlamaCloud + OpenAI Enterprise. Строгая изоляция данных.<br>Ваши экспертные и корпоративные знания остаются только вашими.</p>
         </div>
     </section>
 
